# oor

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  BUGS.md  FAQ.md  LICENSE  LICENSE_HISTORY  Makefile  README.android.md  README.md  README.vpp.md  RELEASE_NOTES.md  TODO.md  Vagrantfile
Apple/: .gitignore  Notes.rtf  README.md  oor-Bridging-Header.h
Debug/: makefile  sources.mk
Docker/: Dockerfile  Dockerfile_testing  README.md  docker-compose-network.yml
VPP/: patch-17  vpp.patch
VPP/oor_ctrl-plugin/: Makefile.am  configure.ac  oor_ctrl.am
VPP/oor_ctrl-plugin/oor_ctrl/: node.c  oor_ctrl.api  oor_ctrl.c  oor_ctrl.h  oor_ctrl_all_api_h.h  oor_ctrl_msg_enum.h  oor_ctrl_test.c
VPP/oor_pkt_miss-plugin/: Makefile.am  configure.ac  oor_pkt_miss.am
VPP/oor_pkt_miss-plugin/oor_pkt_miss/: node.c  oor_pkt_miss.api  oor_pkt_miss.c  oor_pkt_miss.h  oor_pkt_miss_all_api_h.h  oor_pkt_miss_msg_enum.h  oor_pkt_miss_test.c
android/: .classpath  .gitignore  AndroidManifest.xml  Makefile  README.md  build.gradle  build.xml  gradle.properties  local.properties  select_appl.bash  settings.gradle
lispManager/: Android.mk  lispmanager.c
lisp_int/: .gitignore  Makefile  lisp_int.c  lisp_int.h
lisp_mod/: Makefile  lisp_input.c  lisp_input.h  lisp_ipc.c  lisp_ipc.h  lisp_ipc_kernel.h  lisp_mod.c  lisp_mod.h  lisp_output.c  lisp_output.h  lisp_slab.c  lisp_slab.h  packettypes.h  tables.c  tables.h  timers.c  version.h
lispconf/: .gitignore  Makefile  cmdline.c  cmdline.h  lispconf.c  lispconf.ggo
lispd/: .gdbinit  .gitignore  010-Makefile-opewrt.patch  Android.mk  CodingStyle.md  Makefile  cksum.c  cksum.h  cmdline.c  cmdline.h  debug.sh  defs.h  defs_re.h  iface_list.c  iface_list.h  iface_mgmt.c  iface_mgmt.h  lisp_ipc.h  lispd-tun.patch  lispd.c  lispd.conf.example  lispd.ggo  lispd.h  lispd.uci.example  lispd_address.c  lispd_address.h  lispd_afi.c  lispd_afi.h  lispd_api.c  lispd_api.h  lispd_api_internals.c  lispd_api_internals.h  lispd_config.c  lispd_config.h  lispd_config_confuse.c  lispd_config_confuse.h  lispd_config_functions.c  lispd_config_functions.h  lispd_config_uci.c  lispd_config_uci.h  (+98 more)
lispmobApp/: .classpath  .project
netconf/: README  iana-afn-safi.yin  ietf-inet-types.yang  lispd_api_netconf.c  lispd_api_netconf.h  lispmob_Makefile  lispmob_lispsimple.c  lispsimple.paths  lispsimple.yang  lispsimple.yin  netconf.conf.example  oor_Makefile  oor_api_netconf.c  oor_api_netconf.h  (+1 more)
oor/: .gitignore  CMakeLists.txt  CodingStyle.md  Makefile  cmdline.c  cmdline.h  defs.h  iface_list.c  iface_list.h  iface_mgmt.c  iface_mgmt.h  oor.c  oor.conf.example  oor.ggo  oor.h  oor.initd  oor.service  oor_external.h  oor_jni.c  oor_jni.h
oor/config/: oor_api.c  oor_api.h  oor_api_internals.c  oor_api_internals.h  oor_config_confuse.c  oor_config_confuse.h  oor_config_functions.c  oor_config_functions.h  oor_config_uci.c  oor_config_uci.h
oor/control/: lisp_ddt_mr.c  lisp_ddt_mr.h  lisp_ddt_node.c  lisp_ddt_node.h  lisp_ms.c  lisp_ms.h  lisp_rtr.c  lisp_rtr.h  lisp_tr.c  lisp_tr.h  lisp_xtr.c  lisp_xtr.h  oor_control.c  oor_control.h  oor_ctrl_device.c  oor_ctrl_device.h  oor_local_db.c  oor_local_db.h  oor_map_cache.c  oor_map_cache.h
oor/control/control-data-plane/: cdp_punt.c  cdp_punt.h  control-data-plane.c  control-data-plane.h
oor/control/control-data-plane/apple/ios/: Notes ios control-data-plane.rtf  cdp_ios.c  cdp_ios.h
oor/control/control-data-plane/tun/: cdp_tun.c
oor/control/control-data-plane/vpnapi/: cdp_vpnapi.c  cdp_vpnapi.h
oor/control/control-data-plane/vpp/: cdp_vpp.c  cdp_vpp.h
oor/data-plane/: data-plane.c  data-plane.h  ttable.c  ttable.h
oor/data-plane/apple/ios/: Notes ios-data-plane.rtf  ios.c  ios.h  ios_input.c  ios_input.h  ios_output.c  ios_output.h
oor/data-plane/encapsulations/: vxlan-gpe.c  vxlan-gpe.h
oor/data-plane/tun/: tun.c  tun.h  tun_input.c  tun_output.c  tun_output.h
oor/data-plane/vpnapi/: vpnapi.c  vpnapi.h  vpnapi_input.c  vpnapi_output.c  vpnapi_output.h
oor/data-plane/vpp/: vpp.c  vpp.h
oor/elibs/base64/: base64.c  base64.h
oor/elibs/bob/: lookup3.c  lookup3.h
oor/elibs/khash/: khash.h
oor/elibs/mbedtls/: md.h  md_internal.h  sha256.c  sha256.h
oor/elibs/ovs/: list.h
oor/elibs/patricia/: patricia.c  patricia.h
oor/fwd_policies/: balancing_locators.c  balancing_locators.h  fwd_addr_func.c  fwd_addr_func.h  fwd_policy.c  fwd_policy.h  fwd_utils.c  fwd_utils.h
oor/fwd_policies/flow_balancing/: fb_addr_func.c  fb_addr_func.h  flow_balancing.c  flow_balancing.h  fwd_entry_tuple.c  fwd_entry_tuple.h
oor/fwd_policies/vpp_balancing/: fwd_entry_vpp.c  fwd_entry_vpp.h  vpp_balancing.c  vpp_balancing.h
oor/lib/: cksum.c  cksum.h  ddt_map_cache_entry.c  ddt_map_cache_entry.h  generic_list.c  generic_list.h  hmac.c  htable_ptrs.c  htable_ptrs.h  iface_locators.c  iface_locators.h  int_table.c  int_table.h  interfaces_lib.c  interfaces_lib.h  ios_packetTunnelProvider_api.c  ios_packetTunnelProvider_api.h  ios_packetTunnelProvider_api_l.h  lbuf.c  lbuf.h  lisp_site.c  lisp_site.h  map_cache_entry.c  map_cache_entry.h  map_cache_rtr_data.c  map_cache_rtr_data.h  map_local_entry.c  map_local_entry.h  mapping_db.c  mapping_db.h  mem_util.c  mem_util.h  nonces_table.c  nonces_table.h  oor_log.c  oor_log.h  packets.c  packets.h  pointers_table.c  pointers_table.h  (+17 more)
oor/lib/vpp_api/: ctrl_vpp_plugin.c  pkt_miss_vpp_plugin.c  vpp_api.c  vpp_api.h  vpp_api_reply.c  vpp_api_requests.c  vpp_api_requests.h
oor/liblisp/: liblisp.c  liblisp.h  lisp_address.c  lisp_address.h  lisp_data.c  lisp_data.h  lisp_ip.c  lisp_ip.h  lisp_lcaf.c  lisp_lcaf.h  lisp_locator.c  lisp_locator.h  lisp_mapping.c  lisp_mapping.h  lisp_message_fields.c  lisp_message_fields.h  lisp_messages.c  lisp_messages.h  lisp_mref_mapping.c  lisp_mref_mapping.h
oor/net_mgr/: net_mgr.c  net_mgr.h  net_mgr_proc_fc.c  net_mgr_proc_fc.h
oor/net_mgr/apple/ios/: Notes netm_ios.rtf  netm_ios.c  netm_ios.h  route.h
oor/net_mgr/kernel/: iface_mgmt.c  iface_mgmt.h  netm_kernel.c  netm_kernel.h
oor/net_mgr/vpp/: netm_vpp.c  netm_vpp.h
(+494 files in other folders)
